--- a/css/style.css
+++ b/css/style.css
@@ -1,308 +1,1 @@
-.content-text > h1,
-.content-text > p {
-  font-family: "Exo 2",serif;
-  font-weight: 600;
-}
-p.footer-p-a > a,
-p.footer-p-a > a:hover {
-  text-decoration: underline;
-}
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  
-  font-family: "Exo 2",serif;
-}
-body {
-  background-image: url('../images/bbn .jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: auto;
-  position: relative;
-  z-index: 1;
-  background-attachment: fixed;
-}
-body::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -1;
-  background: linear-gradient(109.6deg, rgb(0 0 0 / 92%) 11.2%, rgb(8 8 8) 51.2%, rgb(0 0 0 / 86%) 98.6%);
-  height: 100%;
-}
-.HomeFlex {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 20px 0;
-}
-.Home_img > a > img  {
-  width: 95px;
-}
-.Home_btn > a {
-  display: inline-block;
-  margin: 0 4px;
-}
-.Home_btn > a > button {
-  padding: 10px 32px;
-  border-radius: 8px;
-  border: 1px solid rgb(255 255 255 / 93%);
-  outline: 0;
-  color: #fff;
-  font-size: 16px;
-  font-weight: 600;
-  font-family: "Exo 2",serif;
-  background: #000000;
-  color: yellow;
-}
-.Home_btn > a > button.log {
-  background: #ffd50c;
-  color: #000;
-  border: 0;
-}
-.ContentArea {
-  padding: 60px 0 0;
-}
-.content-text > h1 {
-  color: #fdfcff;
-  font-size: 40px;
-  font-style: italic;
-}
-.content-text > p {
-  color: #fff;
-  font-size: 18px;
-  padding: 5px 0;
-}
-.PoI542T_l2241 {
-  padding: 8px 0;
-}
-.Zjd450w_dP_f {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.footer {
-  border-width: 1px;
-  padding: 30px 15px 20px;
-  position: relative;
-  bottom: 0;
-  background: #121212;
-  border-top: 1px solid #fdd835;
-  margin: 60px 0px 0px 0px;
-}
-p.footer-p-a, p.footer-p-note {
-  font-size: 14px;
-  font-weight: 300;
-  color: #d3cfcf;
-  line-height: 24px;
-  font-family: "Exo 2",serif;
-  margin: 20px 0px 5px 0px;
-}
-p.footer-p-a > a {
-  color: #fff !important;
-}
-p.footer-copyright {
-  color: #fff !important;
-  font-size: 13px !important;
-  font-weight: 500;
-  font-family: "Exo 2",serif;
-  padding: 8px;
-  margin: 0px;
-}
-p.footer-copyright > a {
-  color: #fff !important;
-}
-.footer-links > ul > li {
-  list-style: none;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  color: #fff;
-  padding: 0 2px;
-}
-.footer-links > ul > li > a {
-  font-family: "Exo 2",serif;
-  color: #fff;
-  font-size: 14px;
-  text-decoration: underline !important;
-}
-.footer-links li a:after {
-  display: inline-block;
-  padding: 0 0 0 0.5em;
-  color: #fff;
-  content: "|";
-}
-.footer-links li:last-child a:after {
-  color: transparent;
-}
-.footer-links > ul{
-  padding-left: 0px;
-}
-.contact-social>ul {
-  display: inline-flex;
-  list-style: none;
-  align-items: baseline;
-  margin: 0px;
-  padding: 15px 0px;
-}
-img.f-2 {
-  max-width: 55px;
-  border-radius: 10px;
-}
-
-img.f-5 {
-  min-width: 150px;
-}
-
-img.f-1 {
-  min-width: 208px;
-}
-img.f-4 {
-  min-width: 150px;
-}
-
-.contact-social ul li a {
-  display: inline-block;
-  height: 70px;
-  transition: .4s;
-  max-width: 250px;
-  padding: 10px;
-}
-
-.contact-social ul li a>img {
-  width: 120px;
-}
-
-.contact-social {
-  text-align: center;
-}
-
-.card-container {
-  display: flex;
-  gap: 20px;
-  padding: 25px 0;
-}
-
-.card-b-offer {
-  background: #1e1e1e;
-  border-radius: 4px;
-  overflow: hidden;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  transition: transform 0.3s ease; /* For card hover scaling */
-}
-
-.card-b-offer:hover {
-  transform: scale(1.05); /* Gently scales the card */
-}
-.card-image {
-  width: 100%;
-  height: 120px;
-  object-fit: cover; /* Ensures the image scales properly */
-  display: block;
-  position: relative;
-  transition: transform 0.5s ease; /* Smooth zoom-in for image */
-}
-
-.card-b-offer:hover .card-image {
-  transform: scale(1.1); /* Zoom-in effect on hover */
-}
-
-.overlay {
-  position: absolute;
-  top: -90px;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  padding-left: 10px;
-  pointer-events: none;
-}
-
-.overlay h3 {
-  font-size: 20px;
-  color: #fdd835;
-  text-align: left;
-  z-index: 1;
-  width: 200px;
-  font-weight: 700;
-}
-
-.overlay p {
-  font-size: 11px;
-  color: #e9e9e9;
-  text-align: left;
-  z-index: 1;
-  width: 245px;
-}
-
-
-.card-content {
-  padding: 20px;
-}
-
-.card-content h4 {
-  font-size: 20px;
-  color: #ffffff;
-  margin-bottom: 20px;
-  font-weight: 600;
-  height: 35px;
-}
-
-.card-content p {
-  font-size: 13px;
-  color: #cdcdcd;
-  margin-bottom: 20px;
-}
-
-.card-content .btn {
-  background: #ffd50c !important;
-  border: none;
-  color: #000;
-  padding: 10px 20px;
-  font-size: 15px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: 0.3s ease;
-  font-weight: 600;
-}
-
-.card-content .btn:hover {
-  background: #d1a804;
-}
-
-.sub-text {
-  padding: 30px 0px;
-}
-
-.sub-text > h2 {
-  font-size: 26px;
-  color: #fff;
-  padding: 12px 0px;
-}
-
-.sub-text > p {
-  font-size: 16px;
-  color: #dfdfdf;
-  padding: 4px 0px;
-}
-.sub-text > ul > li {
-  font-size: 16px;
-  color: #dfdfdf;
-  padding: 4px 0px;
-}
-
-.container.s-title {
-  color: #fff;
-  padding-top: 35px;
-}
+.HomeFlex,.Zjd450w_dP_f{align-items:center;display:flex}.Home_btn>a>button,.content-text>h1,.content-text>p{font-weight:600;font-family:"Exo 2",serif}*,.Home_btn>a>button,.footer-links>ul>li>a,p.footer-copyright,p.footer-p-a,p.footer-p-note{font-family:"Exo 2",serif}.card-b-offer,.disclaimer{width:100%;overflow:hidden}.contact-social,.disclaimer{text-align:center}.card-b-offer,.card-image,.disclaimer>p>img,.footer,body{position:relative}.overlay,body::before{position:absolute;left:0}p.footer-p-a>a,p.footer-p-a>a:hover{text-decoration:underline}*{padding:0;margin:0;box-sizing:border-box}body{background-image:url("../images/bbn .jpg");background-repeat:no-repeat;background-size:cover;height:auto;z-index:1;background-attachment:fixed}body::before{content:"";top:0;right:0;bottom:0;z-index:-1;background:linear-gradient(109.6deg,rgb(0 0 0 / 92%) 11.2%,rgb(8 8 8) 51.2%,rgb(0 0 0 / 86%) 98.6%);height:100%}.overlay h3,.overlay p{text-align:left;z-index:1}.HomeFlex{justify-content:space-between;padding:20px 0}.Home_img>a>img{width:95px}.Home_btn>a{display:inline-block;margin:0 4px}.Home_btn>a>button{padding:10px 32px;border-radius:8px;border:1px solid;outline:0;font-size:16px;background:#000;color:#ff0}.Home_btn>a>button.log{background:#ffd50c;color:#000;border:0}.ContentArea{padding:60px 0 0}.content-text>h1{color:#fdfcff;font-size:40px;font-style:italic}.content-text>p{color:#fff;font-size:18px;padding:5px 0}.PoI542T_l2241{padding:8px 0}.Zjd450w_dP_f{justify-content:space-between}.footer{border-width:1px;padding:30px 15px 20px;bottom:0;background:#121212;border-top:1px solid #fdd835;margin:60px 0 0}p.footer-p-a,p.footer-p-note{font-size:14px;font-weight:300;color:#d3cfcf;line-height:24px;margin:20px 0 5px}p.footer-copyright,p.footer-copyright>a,p.footer-p-a>a{color:#fff!important}p.footer-copyright{font-size:13px!important;font-weight:500;padding:8px;margin:0}.footer-links>ul>li{list-style:none;display:inline-flex;align-items:center;justify-content:center;color:#fff;padding:0 2px}.footer-links>ul>li>a{color:#fff;font-size:14px;text-decoration:underline!important}.footer-links li a:after{display:inline-block;padding:0 0 0 .5em;color:#fff;content:"|"}.footer-links li:last-child a:after{color:transparent}.footer-links>ul{padding-left:0}.contact-social>ul{display:inline-flex;list-style:none;align-items:baseline;margin:0;padding:15px 0}img.f-2{max-width:55px;border-radius:10px}img.f-5{min-width:135px}img.f-6{max-width:90px}img.f-1{min-width:208px}img.f-4{min-width:150px}.contact-social ul li a{display:inline-block;height:70px;transition:.4s;max-width:250px;padding:10px}.contact-social ul li a>img{width:120px}.card-container{display:flex;gap:20px;padding:25px 0}.card-b-offer{background:#1e1e1e;border-radius:4px;box-shadow:0 5px 15px rgba(0,0,0,.5);display:flex;flex-direction:column;transition:transform .3s}.card-b-offer:hover{transform:scale(1.05)}.card-image{width:100%;height:120px;object-fit:cover;display:block;transition:transform .5s}.card-b-offer:hover .card-image{transform:scale(1.1)}.overlay{top:-65px;width:100%;height:100%;display:flex;flex-direction:column;justify-content:center;align-items:flex-start;padding-left:10px;pointer-events:none}.overlay h3{font-size:20px;color:#fdd835;width:200px;font-weight:700}.overlay p{font-size:11px;color:#e9e9e9;width:245px}.card-content{padding:20px}.card-content h4{font-size:20px;color:#fff;margin-bottom:20px;font-weight:600;height:35px}.card-content p{font-size:13px;color:#cdcdcd;margin-bottom:20px}.card-content .btn{background:#ffd50c!important;border:none;color:#000;padding:10px 20px;font-size:15px;border-radius:5px;cursor:pointer;transition:.3s;font-weight:600}.card-content .btn:hover{background:#d1a804}.sub-text{padding:30px 0}.sub-text>h2{font-size:26px;color:#fff;padding:12px 0}.sub-text>p,.sub-text>ul>li{font-size:16px;color:#dfdfdf;padding:4px 0}.container.s-title{color:#fff;padding-top:35px}.disclaimer>p{color:#fff;font-size:13px;font-weight:400;line-height:24px;font-style:normal;margin:0;padding:5px 0}.disclaimer{box-shadow:0 16px 80px 0 rgba(101,77,255,.171);background:#ddcd14;background:radial-gradient(at left top,#1e1e1e,#5c5b5b)}.disclaimer>p>img{width:20px;top:-1px;margin-right:2px}
